...
  late String filterPriceRangeEnd;
  late String filterRecipientName;
  late String filterRecipientAccount;
  late String filterSenderName;
  late String filterCategory;
  late String filterSortingOrder;
  Transactions(
      {required this.filterDateStart,
      required this.filterDateEnd,
      required this.filterCurrency,
      required this.filterTransactionType,
      required this.filterPriceRangeStart,
      required this.filterPriceRangeEnd,
...
          IconButton(
            icon: Icon(Icons.sort),
            onPressed: () {
              showDialog(
                context: context,
                builder: (context) => AlertDialog(
                  title: Text("Sort by"),
                  content: Column(
                    mainAxisSize: MainAxisSize.min,
                    children: [
                      ListTile(
                        title: Text("Amount (ascending)"),
                        onTap: () {
                          // Sort transactions by amount (ascending)
                          widget.filterSortingOrder = "amountAsc";
                          Navigator.pushReplacement(
                              context,
                              MaterialPageRoute(
                                  builder: (BuildContext context) =>
                                      super.widget));
                        },
                      ),
                      ListTile(
                        title: Text("Amount (descending)"),
                        onTap: () {
                          // Sort transactions by amount (descending)
                          widget.filterSortingOrder = "amountDesc";
                          Navigator.pushReplacement(
                              context,
                              MaterialPageRoute(
                                  builder: (BuildContext context) =>
                                      super.widget));
                        },
                      ),
                      ListTile(
                        title: Text("Date (ascending)"),
                        onTap: () {
                          // Sort transactions by date (ascending)
                          widget.filterSortingOrder = "createdAtAsc";
                          Navigator.pushReplacement(
                              context,
                              MaterialPageRoute(
                                  builder: (BuildContext context) =>
                                      super.widget));
                        },
                      ),
                      ListTile(
                        title: Text("Date (descending)"),
                        onTap: () {
                          // Sort transactions by date (descending)
                          widget.filterSortingOrder = "createdAtDesc";
                          Navigator.pushReplacement(
                              context,
                              MaterialPageRoute(
...
