...
                color: Colors.grey[700],
              ),
              textAlign: TextAlign.center,
            ),
            const SizedBox(height: 50.0),
            ElevatedButton(
              key: const ValueKey('logInButton'), // Add a key to the button
              onPressed: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (context) => const logIn()),
                );
              },
...
